# franky

./: .coveragerc.toml  .harper-dictionary.txt  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  codebook.toml  cog.toml  mise.toml  pyproject.toml  pyrightconfig.json  ruff.toml  rumdl.toml
.agents/skill/franky-theme/: SKILL.md
.agents/skill/franky-theme/references/: theme-api.md
.agents/skills/franky-theme/: SKILL.md
.agents/skills/franky-theme/references/: theme-api.md
.github/workflows/: release.yml
assets/: ipy.cast  term.cast
src/franky/: __init__.py  _plaftorm.py  cli.py  theme.py
src/franky/themes/: __init__.py  bat.py  delta.py  ghostty.py  helix.py  kitty.py  lazygit.py  qman.py  yazi.py
tools/: downloads.py
typings/pretty_errors/: __init__.pyi  __main__.pyi
