[project]
name = "franky"
description = "Franky colour theme library."
authors = [{ name = "Gilles Coissac", email = "gilles@ideographe.fr" }]
license = { text = "GPL-3.0" }
readme = "README.md"
keywords = ["color", "colour", "theme", "palette", "scheme", "terminal"]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
  "Typing :: Typed",
]

urls.homepage = "https://github.com/gravures/franky/"
urls.repository = "https://github.com/gravures/franky/"
urls.documentation = "https://github.com/gravures/franky/"
urls.issue = "https://github.com/gravures/franky/issues"

requires-python = ">=3.11"
dynamic = ["version"]
dependencies = ["standard-deluxe", "pretty-errors"]

[project.scripts]
franky = "franky.cli:main"

[tool.uv]
package = true

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
franky = { workspace = true }
# standard-deluxe = { git = "https://github.com/gravures/standard-deluxe", rev = "dev-features" }
standard-deluxe = { path = "../standard-deluxe", editable = true }

#####################################################
# Build Settings
#####################################################
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"
source-includes = ["CHANGELOG.md"]

[tool.pdm.version]
source = "scm"
tag_regex = '^v(?:\D*)?(?P<version>([1-9][0-9]*!)?(0|[1-9][0-9]*)(\.(0|[1-9][0-9]*))*((a|b|c|rc)(0|[1-9][0-9]*))?(\.post(0|[1-9][0-9]*))?(\.dev(0|[1-9][0-9]*))?$)$'
fallback_version = "0.0.0"
write_to = "franky/_version.py"
write_template = "__version__ = '{}'"

#####################################################
# Dev Dependencies
#####################################################
[dependency-groups]
dev = ["basedpyright>=1.28", "ruff>=0.9", "pre-commit>=4.1"]
test = [
  "pytest>=9.0",
  "hypothesis",
  "coverage[toml]>=7.13",
  "tox>=4.24",
  "tox-pdm>=0.7.2",
  "dead>=2.1",
]

#####################################################
# PDM SCRIPTS
#####################################################
[tool.pdm.scripts]
lock_ = "uv lock --no-python-downloads"
sync_ = "uv sync --locked --all-packages --no-python-downloads {args}"
build_ = "uv build --all-packages --no-python-downloads"
publish_ = "uv publish -v --no-python-downloads ./dist/*"
install_ = { composite = ["lock_", "sync_"] }
list_ = "pdm list --fields name,groups,version,licenses,homepage --sort groups,name,licenses --exclude :sub"

test-types = "pdm run basedpyright --stats ./**"

pc-init = { composite = ["pre-commit install --install-hooks", "pc-update"] }
pc-update = "pre-commit autoupdate"
pc-check = { env = { "SKIP" = "basedpyright" }, cmd = "pre-commit run --all-files" }
pc-clean = "pre-commit clean && pre-commit gc"

checkup = { composite = [
  "pdm show",
  "list_",
  "tokei --sort code",
  "pc-check",
  "test-types",
  "dead",
  # "test-cover",
], keep_going = true }
