[project]
name = "franky-theme"
description = "Franky colour theme library."
authors = [{ name = "Gilles Coissac", email = "gilles@ideographe.fr" }]
license = { text = "GPL-3.0" }
readme = "README.md"
keywords = ["color", "colour", "theme", "palette", "scheme", "terminal"]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
  "Typing :: Typed",
]

urls.homepage = "https://github.com/gravures/franky/"
urls.repository = "https://github.com/gravures/franky/"
urls.documentation = "https://github.com/gravures/franky/"
urls.issue = "https://github.com/gravures/franky/issues"
urls.Changelog = "https://github.com/gravures/franky/releases"

requires-python = ">=3.11"
dynamic = ["version"]
dependencies = ["standard-deluxe", "pretty-errors"]

[project.scripts]
franky = "franky.cli:main"

[tool.uv]
package = true

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
franky-theme = { workspace = true }

#####################################################
# Build Settings
#####################################################
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"
source-includes = [
  "tools/",
  "typings/",
  "CHANGELOG.md",
  "changelog.tera",
  "cog.toml",
  "mise.toml",
  "pyrightconfig.json",
  "ruff.toml",
  "uv.lock",
]

[tool.pdm.version]
source = "scm"
write_to = "franky/_version.py"
write_template = "__version__ = '{}'"

#####################################################
# Dev Dependencies
#####################################################
[dependency-groups]
dev = ["basedpyright>=1.28", "ruff>=0.9", "pre-commit>=4.1"]
